--- a/node_wsp_team1/public/login.html
+++ b/node_wsp_team1/public/login.html
@@ -84,15 +84,16 @@
       </div>
     </div>
 
-    <!-- Firebase SDK 추가 -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+    <!-- Firebase 클라이언트 SDK 및 설정 파일 로드 -->
+    <script type="module">
+      import {
+        auth,
+        provider,
+        createUserWithEmailAndPassword,
+        signInWithEmailAndPassword,
+        signInWithPopup,
+      } from "./firebaseConfig.js";
 
-    <!-- Firebase 구성 정보 로드 -->
-    <script src="firebaseConfig.js"></script>
-
-    <script>
-      const auth = firebase.auth();
       const errorDiv = document.getElementById("error");
       const authBtn = document.getElementById("authBtn");
       const googleBtn = document.getElementById("googleBtn");
@@ -120,7 +121,7 @@
       });
 
       // 로그인 또는 회원가입 버튼 클릭 이벤트
-      authBtn.addEventListener("click", () => {
+      authBtn.addEventListener("click", async () => {
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
 
@@ -129,46 +130,45 @@
           return;
         }
 
-        if (isLogin) {
-          // 로그인 로직
-          auth
-            .signInWithEmailAndPassword(email, password)
-            .then((userCredential) => {
-              const user = userCredential.user;
-              alert(`환영합니다, ${user.email}!`);
-              window.location.href = "/home"; // 로그인 후 리디렉션
-            })
-            .catch((error) => {
-              errorDiv.textContent = error.message;
-            });
-        } else {
-          // 회원가입 로직
-          auth
-            .createUserWithEmailAndPassword(email, password)
-            .then((userCredential) => {
-              const user = userCredential.user;
-              alert(`회원가입이 완료되었습니다, ${user.email}!`);
-              window.location.href = "/home"; // 회원가입 후 리디렉션
-            })
-            .catch((error) => {
-              errorDiv.textContent = error.message;
-            });
+        try {
+          if (isLogin) {
+            // 로그인 로직
+            const userCredential = await signInWithEmailAndPassword(
+              auth,
+              email,
+              password
+            );
+            const user = userCredential.user;
+            alert(`환영합니다, ${user.email}!`);
+            window.location.href = "/home"; // 로그인 후 리디렉션
+          } else {
+            // 회원가입 로직
+            const userCredential = await createUserWithEmailAndPassword(
+              auth,
+              email,
+              password
+            );
+            const user = userCredential.user;
+            alert(`회원가입이 완료되었습니다, ${user.email}!`);
+            window.location.href = "/home"; // 회원가입 후 리디렉션
+          }
+        } catch (error) {
+          console.error(error);
+          errorDiv.textContent = error.message;
         }
       });
 
       // 구글 로그인 버튼 클릭 이벤트
-      googleBtn.addEventListener("click", () => {
-        const provider = new firebase.auth.GoogleAuthProvider();
-        auth
-          .signInWithPopup(provider)
-          .then((result) => {
-            const user = result.user;
-            alert(`환영합니다, ${user.displayName}!`);
-            window.location.href = "/home"; // 구글 로그인 후 리디렉션
-          })
-          .catch((error) => {
-            errorDiv.textContent = error.message;
-          });
+      googleBtn.addEventListener("click", async () => {
+        try {
+          const result = await signInWithPopup(auth, provider);
+          const user = result.user;
+          alert(`환영합니다, ${user.displayName}!`);
+          window.location.href = "/home"; // 구글 로그인 후 리디렉션
+        } catch (error) {
+          console.error(error);
+          errorDiv.textContent = error.message;
+        }
       });
 
       // Firebase 인증 상태 변경 시 처리
