--- a/node_wsp_team1/public/login.html
+++ b/node_wsp_team1/public/login.html
@@ -4,71 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>로그인 및 회원가입 페이지</title>
-    <style>
-      /* 간단한 스타일 추가 */
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f2f2f2;
-        display: flex;
-        height: 100vh;
-        justify-content: center;
-        align-items: center;
-      }
-      .auth-container {
-        background-color: white;
-        padding: 20px 30px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 300px;
-      }
-      .auth-container h2 {
-        margin-bottom: 20px;
-        text-align: center;
-      }
-      .auth-container input {
-        width: 100%;
-        padding: 10px;
-        margin: 5px 0 15px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      .auth-container button {
-        width: 100%;
-        padding: 10px;
-        background-color: #4285f4;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-bottom: 10px;
-      }
-      .auth-container button:hover {
-        background-color: #357ae8;
-      }
-      .auth-container .google-btn {
-        background-color: #db4437;
-      }
-      .auth-container .google-btn:hover {
-        background-color: #c33d2e;
-      }
-      .error-message {
-        color: red;
-        margin-bottom: 15px;
-        text-align: center;
-      }
-      .toggle-link {
-        text-align: center;
-        margin-top: 10px;
-      }
-      .toggle-link a {
-        color: #4285f4;
-        cursor: pointer;
-        text-decoration: none;
-      }
-      .toggle-link a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="auth-container">
@@ -120,6 +56,41 @@
         errorDiv.textContent = "";
       });
 
+      /**
+       * 서버에 사용자 정보를 저장하는 함수
+       * @param {string} idToken 사용자 ID 토큰
+       * @param {Object} user 사용자 객체
+       */
+      async function saveUserToServer(idToken, user) {
+        try {
+          const response = await fetch("/saveUser", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              idToken: idToken,
+              user: {
+                email: user.email,
+                name: user.displayName || user.email.split("@")[0],
+                uid: user.uid, // 'uid'로 수정
+              },
+            }),
+          });
+
+          if (!response.ok) {
+            const errorText = await response.text();
+            throw new Error(errorText || "Failed to save user data");
+          }
+
+          console.log("User data saved to server successfully");
+        } catch (error) {
+          console.error("Error saving user data to server:", error);
+          errorDiv.textContent =
+            "서버에 사용자 데이터를 저장하는 데 실패했습니다.";
+        }
+      }
+
       // 로그인 또는 회원가입 버튼 클릭 이벤트
       authBtn.addEventListener("click", async () => {
         const email = document.getElementById("email").value.trim();
@@ -131,27 +102,36 @@
         }
 
         try {
+          let userCredential;
           if (isLogin) {
             // 로그인 로직
-            const userCredential = await signInWithEmailAndPassword(
+            userCredential = await signInWithEmailAndPassword(
               auth,
               email,
               password
             );
-            const user = userCredential.user;
-            alert(`환영합니다, ${user.email}!`);
-            window.location.href = "/home"; // 로그인 후 리디렉션
           } else {
             // 회원가입 로직
-            const userCredential = await createUserWithEmailAndPassword(
+            userCredential = await createUserWithEmailAndPassword(
               auth,
               email,
               password
             );
-            const user = userCredential.user;
-            alert(`회원가입이 완료되었습니다, ${user.email}!`);
-            window.location.href = "/home"; // 회원가입 후 리디렉션
           }
+          const user = userCredential.user;
+
+          // 사용자 ID 토큰 획득
+          const idToken = await user.getIdToken();
+
+          // 서버에 사용자 정보 저장
+          await saveUserToServer(idToken, user);
+
+          if (isLogin) {
+            alert(`환영합니다, ${user.email}!`);
+          } else {
+            alert(`회원가입이 완료되었습니다, ${user.email}!`);
+          }
+          window.location.href = "/home"; // 로그인/회원가입 후 리디렉션
         } catch (error) {
           console.error(error);
           errorDiv.textContent = error.message;
@@ -163,7 +143,14 @@
         try {
           const result = await signInWithPopup(auth, provider);
           const user = result.user;
-          alert(`환영합니다, ${user.displayName}!`);
+
+          // 사용자 ID 토큰 획득
+          const idToken = await user.getIdToken();
+
+          // 서버에 사용자 정보 저장
+          await saveUserToServer(idToken, user);
+
+          alert(`환영합니다, ${user.displayName || user.email}!`);
           window.location.href = "/home"; // 구글 로그인 후 리디렉션
         } catch (error) {
           console.error(error);
@@ -171,7 +158,7 @@
         }
       });
 
-      // Firebase 인증 상태 변경 시 처리
+      // Firebase 인증 상태 변화 감지
       auth.onAuthStateChanged((user) => {
         if (user) {
           console.log(`로그인된 사용자: ${user.email}`);
