--- a/node_wsp_team1/private/admin.html
+++ b/node_wsp_team1/private/admin.html
@@ -1,5 +1,4 @@
-<!-- private/admin.html -->
-
+<!-- public/admin.html -->
 <!DOCTYPE html>
 <html lang="ko">
   <head>
@@ -89,19 +88,18 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <script src="/firebaseConfig.js"></script>
-    <!-- firebaseConfig.js 파일 로드 -->
-
     <script>
       // 사용자 목록 로드 함수
       async function loadUsers(searchQuery = "") {
         try {
+          const idToken = await getIdToken();
           const response = await fetch(
             `/admin/users?search=${encodeURIComponent(searchQuery)}`,
             {
               method: "GET",
               headers: {
                 "Content-Type": "application/json",
-                Authorization: `Bearer ${await getIdToken()}`, // 사용자의 idToken을 가져오는 함수 필요
+                Authorization: `Bearer ${idToken}`, // 사용자의 idToken을 가져오는 함수 필요
               },
             }
           );
@@ -279,9 +277,11 @@
 
           tr.innerHTML = `
           <td>${fairyTale.index}</td>
-          <td>${fairyTale.data.title}</td>
+          <td>${fairyTale.data.title || "제목 없음"}</td>
           <td>
-            <button class="button button-view-detail" data-index="${fairyTale.index}">상세 보기</button>
+            <button class="button button-view-detail" data-index="${
+              fairyTale.index
+            }">상세 보기</button>
           </td>
         `;
 
@@ -350,9 +350,10 @@
       function displayFairyTaleDetails(fairyTale, index) {
         document.getElementById("fairyTaleIndex").textContent = index;
         document.getElementById("fairyTaleTitle").textContent =
-          fairyTale.data.title;
+          fairyTale.data.title || "제목 없음";
         document.getElementById("fairyTaleContent").textContent =
-          fairyTale.data.content;
+          fairyTale.data.context || "내용 없음";
+        // 추가 필드(img, voice)는 필요에 따라 표시할 수 있습니다.
       }
 
       // 동화 목록 모달 닫기 함수
@@ -364,17 +365,12 @@
         }
       }
 
-      // 동화 상세 정보 모달 닫기 함수
-      function closeFairyTaleDetailsModal() {
-        closeFairyTaleModal();
-      }
-
-      // 동화 목록 모달 닫기 버튼
+      // 동화 상세 정보 모달 닫기 버튼
       document
         .getElementById("closeFairyTaleModal")
         .addEventListener("click", closeFairyTaleModal);
 
-      // 사용자 검색 버튼 이벤트 리스너
+      // 검색 버튼 이벤트 리스너
       document.getElementById("searchButton").addEventListener("click", () => {
         const query = document.getElementById("searchInput").value.trim();
         loadUsers(query);
@@ -385,11 +381,6 @@
         document.getElementById("searchInput").value = "";
         loadUsers();
       });
-
-      // 동화 상세 정보 모달 닫기 버튼
-      document
-        .getElementById("closeFairyTaleModal")
-        .addEventListener("click", closeFairyTaleDetailsModal);
 
       // 페이지 로드 시 사용자 목록 로드
       document.addEventListener("DOMContentLoaded", () => {
@@ -410,35 +401,17 @@
         }
       }
 
-      // 동화 목록 모달에서 동화 상세 정보 표시 시
-      async function openFairyTaleDetailsModal(event) {
-        const button = event.target;
-        const index = button.getAttribute("data-index");
-
-        try {
-          const idToken = await getIdToken();
-          const response = await fetch(`/admin/fairyTale/${index}`, {
-            method: "GET",
-            headers: {
-              "Content-Type": "application/json",
-              Authorization: `Bearer ${idToken}`,
-            },
-          });
-
-          if (response.ok) {
-            const fairyTale = await response.json();
-            displayFairyTaleDetails(fairyTale, index);
-            document.getElementById("viewFairyTaleModal").style.display =
-              "block";
-          } else {
-            const errorText = await response.text();
-            alert(`동화 상세 정보 조회 실패: ${errorText}`);
-          }
-        } catch (error) {
-          console.error("Error fetching fairy tale details:", error);
-          alert("동화 상세 정보 조회 중 오류가 발생했습니다.");
+      // Firebase Authentication 상태 변화 감지
+      firebase.auth().onAuthStateChanged((user) => {
+        if (user) {
+          console.log(`로그인된 사용자: ${user.email}`);
+          // 관리자 페이지 표시
+        } else {
+          console.log("로그아웃 상태");
+          // 로그인 페이지로 리디렉션
+          window.location.href = "/login";
         }
-      }
+      });
     </script>
   </body>
 </html>
