--- a/node_wsp_team1/public/login.html
+++ b/node_wsp_team1/public/login.html
@@ -5,6 +5,66 @@
     <meta charset="UTF-8" />
     <title>로그인 및 회원가입 페이지</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+      /* 간단한 스타일 추가 */
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f0f2f5;
+      }
+      .auth-container {
+        background-color: #fff;
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        width: 300px;
+        text-align: center;
+      }
+      .auth-container h2 {
+        margin-bottom: 20px;
+      }
+      .auth-container input {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+      .auth-container button {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      #authBtn {
+        background-color: #4caf50;
+        color: white;
+      }
+      #googleBtn {
+        background-color: #dd4b39;
+        color: white;
+      }
+      .toggle-link {
+        margin-top: 15px;
+      }
+      .toggle-link a {
+        color: #007bff;
+        cursor: pointer;
+        text-decoration: none;
+      }
+      .toggle-link a:hover {
+        text-decoration: underline;
+      }
+      .error-message {
+        color: red;
+        margin-bottom: 10px;
+      }
+    </style>
   </head>
   <body>
     <div class="auth-container">
@@ -22,6 +82,7 @@
 
     <!-- Firebase 클라이언트 SDK 및 설정 파일 로드 -->
     <script type="module">
+      // firebaseConfig.js에서 auth와 provider를 가져옵니다.
       import {
         auth,
         provider,
@@ -29,6 +90,46 @@
         signInWithEmailAndPassword,
         signInWithPopup,
       } from "./firebaseConfig.js";
+
+      // 디버깅을 위한 콘솔 로그 추가
+      console.log("auth:", auth);
+      console.log("provider:", provider);
+      console.log("signInWithPopup:", signInWithPopup);
+
+      /**
+       * 서버에 사용자 정보를 저장하는 함수
+       * @param {string} idToken 사용자 ID 토큰
+       * @param {Object} user 사용자 객체
+       */
+      async function saveUserToServer(idToken, user) {
+        try {
+          const response = await fetch("/saveUser", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              idToken: idToken,
+              user: {
+                email: user.email,
+                name: user.displayName || user.email.split("@")[0],
+                uid: user.uid,
+              },
+            }),
+          });
+
+          if (!response.ok) {
+            const errorText = await response.text();
+            throw new Error(errorText || "Failed to save user data");
+          }
+
+          console.log("User data saved to server successfully");
+        } catch (error) {
+          console.error("Error saving user data to server:", error);
+          errorDiv.textContent =
+            "서버에 사용자 데이터를 저장하는 데 실패했습니다.";
+        }
+      }
 
       const errorDiv = document.getElementById("error");
       const authBtn = document.getElementById("authBtn");
@@ -55,41 +156,6 @@
         }
         errorDiv.textContent = "";
       });
-
-      /**
-       * 서버에 사용자 정보를 저장하는 함수
-       * @param {string} idToken 사용자 ID 토큰
-       * @param {Object} user 사용자 객체
-       */
-      async function saveUserToServer(idToken, user) {
-        try {
-          const response = await fetch("/saveUser", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-              idToken: idToken,
-              user: {
-                email: user.email,
-                name: user.displayName || user.email.split("@")[0],
-                uid: user.uid, // 'uid'로 수정
-              },
-            }),
-          });
-
-          if (!response.ok) {
-            const errorText = await response.text();
-            throw new Error(errorText || "Failed to save user data");
-          }
-
-          console.log("User data saved to server successfully");
-        } catch (error) {
-          console.error("Error saving user data to server:", error);
-          errorDiv.textContent =
-            "서버에 사용자 데이터를 저장하는 데 실패했습니다.";
-        }
-      }
 
       // 로그인 또는 회원가입 버튼 클릭 이벤트
       authBtn.addEventListener("click", async () => {
@@ -134,7 +200,16 @@
           window.location.href = "/home"; // 로그인/회원가입 후 리디렉션
         } catch (error) {
           console.error(error);
-          errorDiv.textContent = error.message;
+          if (isLogin) {
+            errorDiv.textContent = "로그인 실패: " + error.message;
+          } else {
+            if (error.code === "auth/email-already-in-use") {
+              errorDiv.textContent =
+                "이미 사용 중인 이메일입니다. 다른 이메일을 사용하세요.";
+            } else {
+              errorDiv.textContent = "회원가입 실패: " + error.message;
+            }
+          }
         }
       });
 
@@ -154,7 +229,7 @@
           window.location.href = "/home"; // 구글 로그인 후 리디렉션
         } catch (error) {
           console.error(error);
-          errorDiv.textContent = error.message;
+          errorDiv.textContent = "구글 로그인 실패: " + error.message;
         }
       });
 
