--- a/node_wsp_team1/public/login.html
+++ b/node_wsp_team1/public/login.html
@@ -5,66 +5,6 @@
     <meta charset="UTF-8" />
     <title>로그인 및 회원가입 페이지</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      /* 간단한 스타일 추가 */
-      body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f0f2f5;
-      }
-      .auth-container {
-        background-color: #fff;
-        padding: 30px;
-        border-radius: 8px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-        width: 300px;
-        text-align: center;
-      }
-      .auth-container h2 {
-        margin-bottom: 20px;
-      }
-      .auth-container input {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      .auth-container button {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      #authBtn {
-        background-color: #4caf50;
-        color: white;
-      }
-      #googleBtn {
-        background-color: #dd4b39;
-        color: white;
-      }
-      .toggle-link {
-        margin-top: 15px;
-      }
-      .toggle-link a {
-        color: #007bff;
-        cursor: pointer;
-        text-decoration: none;
-      }
-      .toggle-link a:hover {
-        text-decoration: underline;
-      }
-      .error-message {
-        color: red;
-        margin-bottom: 10px;
-      }
-    </style>
   </head>
   <body>
     <div class="auth-container">
@@ -80,9 +20,7 @@
       </div>
     </div>
 
-    <!-- Firebase 클라이언트 SDK 및 설정 파일 로드 -->
     <script type="module">
-      // firebaseConfig.js에서 auth와 provider를 가져옵니다.
       import {
         auth,
         provider,
@@ -91,46 +29,6 @@
         signInWithPopup,
       } from "./firebaseConfig.js";
 
-      // 디버깅을 위한 콘솔 로그 추가
-      console.log("auth:", auth);
-      console.log("provider:", provider);
-      console.log("signInWithPopup:", signInWithPopup);
-
-      /**
-       * 서버에 사용자 정보를 저장하는 함수
-       * @param {string} idToken 사용자 ID 토큰
-       * @param {Object} user 사용자 객체
-       */
-      async function saveUserToServer(idToken, user) {
-        try {
-          const response = await fetch("/saveUser", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-              idToken: idToken,
-              user: {
-                email: user.email,
-                name: user.displayName || user.email.split("@")[0],
-                uid: user.uid,
-              },
-            }),
-          });
-
-          if (!response.ok) {
-            const errorText = await response.text();
-            throw new Error(errorText || "Failed to save user data");
-          }
-
-          console.log("User data saved to server successfully");
-        } catch (error) {
-          console.error("Error saving user data to server:", error);
-          errorDiv.textContent =
-            "서버에 사용자 데이터를 저장하는 데 실패했습니다.";
-        }
-      }
-
       const errorDiv = document.getElementById("error");
       const authBtn = document.getElementById("authBtn");
       const googleBtn = document.getElementById("googleBtn");
@@ -138,9 +36,8 @@
       const toggleText = document.getElementById("toggleText");
       const formTitle = document.getElementById("form-title");
 
-      let isLogin = true; // 현재 폼이 로그인인지 회원가입인지 여부
+      let isLogin = true;
 
-      // 폼 전환 함수
       toggleLink.addEventListener("click", () => {
         isLogin = !isLogin;
         if (isLogin) {
@@ -157,7 +54,54 @@
         errorDiv.textContent = "";
       });
 
-      // 로그인 또는 회원가입 버튼 클릭 이벤트
+      async function setTokenOnServer(idToken, user) {
+        try {
+          const response = await fetch("/setToken", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ idToken, user }),
+          });
+
+          if (!response.ok) {
+            const errorText = await response.text();
+            throw new Error(errorText || "토큰 설정 실패");
+          }
+          console.log("토큰이 서버에 설정되었습니다.");
+        } catch (error) {
+          console.error("토큰 설정 중 오류:", error);
+          errorDiv.textContent = "토큰 설정 중 실패.";
+        }
+      }
+
+      async function checkUserRoleAndRedirect() {
+        try {
+          const protectedResponse = await fetch("/protected", {
+            method: "GET",
+            // 쿠키를 통해 인증하므로 Authorization 헤더 없이도 가능
+            credentials: "include", // 쿠키 전송을 위해 필요할 수 있음
+          });
+
+          if (!protectedResponse.ok) {
+            console.error("Failed to fetch user data from /protected");
+            errorDiv.textContent = "사용자 정보를 가져오는 데 실패했습니다.";
+            return;
+          }
+
+          const userData = await protectedResponse.json();
+          console.log("Fetched user data:", userData);
+
+          // role에 따라 라우트 변경
+          if (userData.role === "admin") {
+            window.location.href = "/admin"; // 관리자인 경우 /admin 라우트로 이동
+          } else {
+            window.location.href = "/home";
+          }
+        } catch (error) {
+          console.error("Error checking user role:", error);
+          errorDiv.textContent = "사용자 역할 확인 중 오류가 발생했습니다.";
+        }
+      }
+
       authBtn.addEventListener("click", async () => {
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
@@ -170,34 +114,24 @@
         try {
           let userCredential;
           if (isLogin) {
-            // 로그인 로직
             userCredential = await signInWithEmailAndPassword(
               auth,
               email,
               password
             );
           } else {
-            // 회원가입 로직
             userCredential = await createUserWithEmailAndPassword(
               auth,
               email,
               password
             );
           }
-          const user = userCredential.user;
 
-          // 사용자 ID 토큰 획득
+          const user = userCredential.user;
           const idToken = await user.getIdToken();
 
-          // 서버에 사용자 정보 저장
-          await saveUserToServer(idToken, user);
-
-          if (isLogin) {
-            alert(`환영합니다, ${user.email}!`);
-          } else {
-            alert(`회원가입이 완료되었습니다, ${user.email}!`);
-          }
-          window.location.href = "/home"; // 로그인/회원가입 후 리디렉션
+          await setTokenOnServer(idToken, user);
+          await checkUserRoleAndRedirect();
         } catch (error) {
           console.error(error);
           if (isLogin) {
@@ -213,34 +147,17 @@
         }
       });
 
-      // 구글 로그인 버튼 클릭 이벤트
       googleBtn.addEventListener("click", async () => {
         try {
           const result = await signInWithPopup(auth, provider);
           const user = result.user;
-
-          // 사용자 ID 토큰 획득
           const idToken = await user.getIdToken();
 
-          // 서버에 사용자 정보 저장
-          await saveUserToServer(idToken, user);
-
-          alert(`환영합니다, ${user.displayName || user.email}!`);
-          window.location.href = "/home"; // 구글 로그인 후 리디렉션
+          await setTokenOnServer(idToken, user);
+          await checkUserRoleAndRedirect();
         } catch (error) {
           console.error(error);
           errorDiv.textContent = "구글 로그인 실패: " + error.message;
-        }
-      });
-
-      // Firebase 인증 상태 변화 감지
-      auth.onAuthStateChanged((user) => {
-        if (user) {
-          console.log(`로그인된 사용자: ${user.email}`);
-          // 필요 시 자동 리디렉션
-          // window.location.href = '/home';
-        } else {
-          console.log("로그아웃 상태");
         }
       });
     </script>
